Conectare cu backend

--- a/Mobile/homeiq-mobile/HomeIQ/AppShell.xaml
+++ b/Mobile/homeiq-mobile/HomeIQ/AppShell.xaml
@@ -8,17 +8,21 @@
     Shell.FlyoutBehavior="Flyout"   
     Shell.NavBarIsVisible="False"
     Title="HomeIQ">
-
-
+    
     <ShellContent
-    Title="Login"
-    ContentTemplate="{DataTemplate views:LoginPageView}"
-    Route="LoginPageView" />
-
+        Title="Login"
+        ContentTemplate="{DataTemplate views:LoginPageView}"
+        Route="LoginPageView" />
+    
     <ShellContent 
-    Title="Main Page"
-    ContentTemplate="{DataTemplate views:MainPageView}" 
-    Route="MainPageView"  />
-   
+        Title="Main Page"
+        ContentTemplate="{DataTemplate views:MainPageView}" 
+        Route="MainPageView"  />
+    
+    <ShellContent
+        Title="Second Page"
+        ContentTemplate="{DataTemplate views:SecondPageView}"
+        Route="SecondPageView" />
+    
 
 </Shell>
